compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bugs__bug1.snap
---
source: compiler-core/src/go/tests/bugs.rs
expression: "\nfn inspect(x) { x }\n\nfn debug(term) {\n  term |> inspect\n  term\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn inspect(x) { x }

fn debug(term) {
  term |> inspect
  term
}


----- COMPILED GO
package mod_P

const Use_Import byte = 0

func inspect[I any](x I) I {
  return x
}

func debug[N any](term N) N {
  var _pipe N = term
  _ = _pipe
  _ = inspect[N](_pipe)
  return term
}
